<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.sandeep</groupId>
    <artifactId>automation-framework</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <selenium.version>3.141.59</selenium.version>
        <logback.version>1.2.3</logback.version>
        <wdm.version>4.4.1</wdm.version>
        <slf4j.version>1.7.31</slf4j.version>
        <restassured.version>4.3.3</restassured.version>
        <cucumber.version>6.10.4</cucumber.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <env.dev>dev</env.dev>
        <env.qa>qa</env.qa>
        <browser>chrome</browser>
        <headless>true</headless>
        <driverType>local</driverType>
        <surefire.version>3.0.0-M5</surefire.version>
        <java.version>1.8</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${restassured.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${wdm.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.20</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>gherkin</artifactId>
            <version>18.1.1</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>io.cucumber</groupId>
                    <artifactId>messages</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-picocontainer</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports-cucumber4-adapter</artifactId>
            <version>1.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports</artifactId>
            <version>5.0.8</version>
        </dependency>
        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports-testng-adapter</artifactId>
            <version>1.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20210307</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>dev_functional</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${surefire.version}</version>
                        <configuration>
                            <systemPropertyVariables>
                                <!-- need to provide user, userpass & cucumber.options for tags while calling maven -->
                                <env>${env.dev}</env>
                                <browser>${browser}</browser>
                                <driverType>${driverType}</driverType>
                                <headless>${headless}</headless>
                            </systemPropertyVariables>
                            <argLine>-Xmx1024m</argLine>
                            <argLine>-XX:MaxPermSize=512m</argLine>
                            <suiteXmlFiles>
                                <suiteXmlFile>src/test/resources/testng_functional_suite.xml</suiteXmlFile>
                            </suiteXmlFiles>
                            <useSystemClassLoader>false</useSystemClassLoader>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>qa_functional</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${surefire.version}</version>
                        <configuration>
                            <useSystemClassLoader>false</useSystemClassLoader>
                            <systemPropertyVariables>
                                <!-- need to provide user, userpass & cucumber.options for tags while calling maven -->
                                <env>${env.qa}</env>
                                <browser>${browser}</browser>
                                <driverType>${driverType}</driverType>
                                <headless>${headless}</headless>
                            </systemPropertyVariables>
                            <argLine>-Xmx1024m</argLine>
                            <argLine>-XX:MaxPermSize=512m</argLine>
                            <suiteXmlFiles>
                                <suiteXmlFile>src/test/resources/testng_functional_suite.xml</suiteXmlFile>
                            </suiteXmlFiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>dev_int</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${surefire.version}</version>
                        <configuration>
                            <useSystemClassLoader>false</useSystemClassLoader>
                            <systemPropertyVariables>
                                <env>${env.dev}</env>
                            </systemPropertyVariables>
                            <argLine>-Xmx1024m</argLine>
                            <argLine>-XX:MaxPermSize=512m</argLine>
                            <suiteXmlFiles>
                                <suiteXmlFile>./src/test/resources/testng_api_suite.xml</suiteXmlFile>
                            </suiteXmlFiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>qa_int</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${surefire.version}</version>
                        <configuration>
                            <useSystemClassLoader>false</useSystemClassLoader>
                            <systemPropertyVariables>
                                <env>${env.qa}</env>
                            </systemPropertyVariables>
                            <argLine>-Xmx1024m</argLine>
                            <argLine>-XX:MaxPermSize=512m</argLine>
                            <suiteXmlFiles>
                                <suiteXmlFile>./src/test/resources/testng_api_suite.xml</suiteXmlFile>
                            </suiteXmlFiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>dev_bdd</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${surefire.version}</version>
                        <configuration>
                            <!--<parallel>methods</parallel>
                            <threadCount>3</threadCount>
                            <perCoreThreadCount>false</perCoreThreadCount>
                            <properties>
                                <property>
                                    <name>dataproviderthreadcount</name>
                                    <value>3</value>
                                </property>
                            </properties>-->
                            <useSystemClassLoader>false</useSystemClassLoader>
                            <systemPropertyVariables>
                                <!-- need to provide user, userpass & cucumber.options for tags while calling maven -->
                                <env>${env.dev}</env>
                                <browser>${browser}</browser>
                                <driverType>${driverType}</driverType>
                                <headless>${headless}</headless>
                            </systemPropertyVariables>
                            <argLine>-Xmx1024m</argLine>
                            <argLine>-XX:MaxPermSize=512m</argLine>
                            <suiteXmlFiles>
                                <suiteXmlFile>src/test/resources/testng_functional_suite.xml</suiteXmlFile>
                            </suiteXmlFiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>qa_bdd</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${surefire.version}</version>
                        <configuration>
                            <useSystemClassLoader>false</useSystemClassLoader>
                            <!--<parallel>methods</parallel>
                            <threadCount>3</threadCount>
                            <perCoreThreadCount>false</perCoreThreadCount>
                            <properties>
                                <property>
                                    <name>dataproviderthreadcount</name>
                                    <value>3</value>
                                </property>
                            </properties>-->
                            <systemPropertyVariables>
                                <!-- need to provide user, userpass & cucumber.options for tags while calling maven -->
                                <env>${env.qa}</env>
                                <browser>${browser}</browser>
                                <driverType>${driverType}</driverType>
                                <headless>${headless}</headless>
                            </systemPropertyVariables>
                            <argLine>-Xmx1024m</argLine>
                            <argLine>-XX:MaxPermSize=512m</argLine>
                            <suiteXmlFiles>
                                <suiteXmlFile>./src/test/resources/testng_functional_suite.xml</suiteXmlFile>
                            </suiteXmlFiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
